[package]
name = "zapdefi"
version = "0.0.1"
authors = ["Malivix <mza2rintareh@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
stderrlog = "0.5.3"
structopt = "0.3"
anyhow = "1.0.31"
faccess = "0.2.3"
futures = "0.3.24"
actix-web = { version = "4.2.1"}
actix = "0.13.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.0"
config = "0.13.2"
r2d2 = "0.8.10"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
actix-rt = "2.7.0"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
daggy = "0.8.0"
num = "0.4.0"
ethers = { git = "https://github.com/gakonst/ethers-rs"}
web3 = "0.18.0"
secp256k1 = { version = "0.21", features = ["recovery"] }

[dependencies.diesel]
features = ["postgres", "r2d2", "numeric", "chrono", "uuid"]
version = "2.0.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

# Uncomment to sacrifice Drop-on-panic cleanup and std::panic::catch_unwind
# for ~24K space saving
#panic = 'abort'
